[gd_scene load_steps=2 format=3 uid="uid://cm2a3612ia7mn"]

[ext_resource type="Script" uid="uid://csrhui7nvaea8" path="res://scripts/feature_item.gd" id="1_jmb7y"]

[node name="FeatureItem" type="PanelContainer" node_paths=PackedStringArray("label")]
script = ExtResource("1_jmb7y")
label = NodePath("Label")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Feature"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
